<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewPedidoId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/id1"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cliente1"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewDataEntrega"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/data_de_entrega"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/status1"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonDetalhes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalhes1" />
</LinearLayout>